// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.Pay.PayPanelFooter current step is "address" should render correctly 1`] = `
<styled.div>
  <PayButtons
    hasBackButton={false}
    hasSubmitButton={true}
    isDisabled={false}
    isProcessing={false}
    nextButtonText={
      <injectIntl(FormattedMessage)
        defaultMessage="Next"
        id="components.Pay.next"
      />
    }
    previousStep={[Function]}
  />
  <Text
    fontWeight="normal"
    mt={3}
    textAlign="center"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="Your current balance"
      id="components.Pay.current_balance"
    />
    :
  </Text>
  <Text
    fontSize="xs"
    textAlign="center"
  >
    <CryptoValue
      value={1}
    />
     
    sats
     
    <injectIntl(FormattedMessage)
      defaultMessage="(onchain),"
      id="components.Pay.on_chain"
    />
  </Text>
  <Text
    fontSize="xs"
    textAlign="center"
  >
    <CryptoValue
      value={1}
    />
     
    sats
     
    <injectIntl(FormattedMessage)
      defaultMessage="(in channels)"
      id="components.Pay.in_channels"
    />
  </Text>
</styled.div>
`;

exports[`component.Pay.PayPanelFooter current step is "summary" should render correctly 1`] = `
<styled.div>
  <PayButtons
    hasBackButton={true}
    hasSubmitButton={true}
    isDisabled={false}
    isProcessing={false}
    nextButtonText={
      <React.Fragment>
        <injectIntl(FormattedMessage)
          defaultMessage="Send"
          id="components.Pay.send"
        />
         
        <CryptoValue
          value={1}
        />
         
        sats
      </React.Fragment>
    }
    previousStep={[Function]}
  />
  <Text
    fontWeight="normal"
    mt={3}
    textAlign="center"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="Your current balance"
      id="components.Pay.current_balance"
    />
    :
  </Text>
  <Text
    fontSize="xs"
    textAlign="center"
  >
    <CryptoValue
      value={1}
    />
     
    sats
     
    <injectIntl(FormattedMessage)
      defaultMessage="(onchain),"
      id="components.Pay.on_chain"
    />
  </Text>
  <Text
    fontSize="xs"
    textAlign="center"
  >
    <CryptoValue
      value={1}
    />
     
    sats
     
    <injectIntl(FormattedMessage)
      defaultMessage="(in channels)"
      id="components.Pay.in_channels"
    />
  </Text>
</styled.div>
`;
